@@ -17,7 +17,7 @@ RemovalBlacklistFile=removal_blacklist.cfg
 # we use this right now to emulate Breaks
 KeepInstalledPkgs=gnumeric, gnumeric-gtk, hpijs
 KeepInstalledSection=translations
-PostInstallScripts=./apt-autoinst-fixup.py
+#PostInstallScripts=./apt-autoinst-fixup.py
 RemoveObsoletes=yes
 
 # information about the individual meta-pkgs
