@@ -4,6 +4,4 @@ ubuntu-minimal
 ubuntu-desktop
 kubuntu-desktop
 edubuntu-desktop
-linux-image-.*
-linux-restricted-.*
 nvidia-glx.*
