@@ -13,6 +13,7 @@ update-manager (1:0.63) gutsy; urgency=low
     - fix in snapshot feature (Fixes LP: #108413)
     - deal better with very slow downloads (disable cache cleanup)
     - improve free space calculation in /boot (Fixes LP: #116163, #104337)
+    - implement SystemCleanup spec kernel removal
   * Separate downloading and upgrading (Fixes LP: #91978)
   * Show demotions before runing the upgrade (Fixes LP: #91998)
   * UpdateManager/UpdateManager.py:
